Removed the PageNode class to allow different Sites to have different page hierarchies. Also Page and Site are now ActiveRecords.